# personal-health-coach

./: .env  .gitignore  LICENSE  Makefile  README.md  dev.env  docker-compose.yaml  hello.py  pyproject.toml
PRD/: PRD_MVP.md
backend/: Makefile  alembic.ini  main.py
backend/alembic/: README  env.py
backend/alembic/versions/: 0b4f0a4b1827_.py  11e4f954e017_initial_schema.py  718b3d545d3f_.py  83fe7c4686c5_.py  8bc3f21f2655_.py  b42ace606676_add_sender_enum_again.py  df1a64bf902e_add_sender_enum.py  fc887c3d7801_.py
backend/api/v1/routes/: auth.py  chat.py
backend/database/: Makefile  config.py  connection.py  db_models.py  test_db.py
backend/llm/: base.py  client_factory.py  experiment.py  ollama_client.py  openai_client.py  prompts.py
backend/models/: token.py
backend/services/: auth.py  chat.py  fhir.py  user.py
backend/tests/api/v1/routes/: test_routes_chat.py
backend/tests/database/: test_db.py
backend/tests/services/: test_chat.py  test_fhir.py  test_services_chat.py
frontend/: Makefile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js  index.js
src/llm/: experiment.py
